# RS2_Group_18

./: ForceSensor_Ultrasound_Screen_RS2ENDEFFECTOR.ino  README.md  test  toolpath_node (edit).cpp
arm_controller/: CMakeLists.txt  package.xml
arm_controller/launch/: ur_arm_controller_launch.py
arm_controller/src/: arm_controller.cpp  arm_controller.h  arm_interface.cpp  arm_interface.h  controller_main.cpp  interface_main.cpp
localisation/: CMakeLists.txt  package.xml
localisation/bag2/: bag2_0.mcap  metadata.yaml
localisation/rosbag2_2024_05_22-00_50_22/: metadata.yaml
localisation/src/: aruco_localisation.cpp
project/cpp/: CMakeLists.txt  asdf.cpp  asdf.h  graph.cpp  graph.h  main.cpp  publisher.cpp
project/svg_path/: svg_reader.py
project/test/: GUITest 1.py  animate.py
rosbag2_2024_05_22-00_04_57/: metadata.yaml  rosbag2_2024_05_22-00_04_57_0.mcap
rosbag2_final/: metadata.yaml  rosbag2_2024_06_04-01_23_18_0.mcap
rosbag2_jacob_localised_toolpath/: metadata.yaml  rosbag2_2024_05_29-00_13_37_0.mcap
rosbag2_quang_localisation/: rosbag2_2024_05_22-00_50_22_0.mcap
selfie_project/: ImageProcessing.py  imageprocessing.py  main.py  svg_publisher.py  svg_reader.py
test/: test.cpp
toolpath_package/: CMakeLists.txt  package.xml
toolpath_package/install/toolpath_package/share/ament_index/resource_index/parent_prefix_path/: toolpath_package
toolpath_package/install/toolpath_package/share/toolpath_package/: local_setup.dsv  package.xml
toolpath_package/src/: CMakeLists.txt  graph.h  greedy.cpp  processor.cpp  processor.h  publisher.cpp
toolpath_package_update/: CMakeLists.txt
toolpath_package_update/install/: local_setup.sh
toolpath_package_update/install/toolpath_package/share/toolpath_package/: package.bash  package.ps1  package.zsh
toolpath_package_update/src/: processor.cpp  publisher.cpp
toolpath_package_update2405/: CMakeLists.txt
toolpath_package_update2405/log/: latest_build
toolpath_package_update2405/src/: greedy.h  publisher.cpp  subscriber.cpp
toolpath_package_updated29-05/: CMakeLists.txt
toolpath_package_updated29-05/install/: setup.sh
toolpath_package_updated29-05/install/toolpath_package/share/toolpath_package/: package.dsv  package.sh
toolpath_package_updated29-05/src/: graph.h  processor.h  publisher.cpp  subscriber.cpp
week07/: test  test.cpp
week07/project/: CMakeLists.txt  main  main.cpp
week07/test/: test
